# thai-video-downloader

./: README.md  TODO.md  downloader.py  requirements.txt  setup.bat
.github/workflows/: ci.yml  release.yml
.miracle/: project.md
.miracle/sessions/: 2025-01-18-session-1.md
gui/: package-lock.json  package.json
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  queue.rs
gui/src-tauri/src/downloader/: browser.rs  hls.rs  mod.rs  video.rs
