[package]
name = "thai-video-downloader"
version = "1.0.0"
description = "Thai Video Downloader - Download videos from Thai streaming sites"
authors = ["Developer"]
edition = "2021"
default-run = "thai-video-downloader"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
scraper = "0.22"
dirs = "6"
# New dependencies for Rust-only implementation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
m3u8-rs = "6"
futures = "0.3"
url = "2"
thiserror = "2"
tempfile = "3"
indicatif = "0.17"
uuid = { version = "1", features = ["v4"] }
